--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <h1>Hola Mundo</h1>
+    <p>Aprendiendo a manejar github</p>
     
 </body>
 </html>
