cree una lista en el html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <h1>Hola Mundo</h1>
     <p>Aprendiendo a manejar github</p>
+    <ol>
+        <li>
+            punto 1
+        </li>
+        <li>punto 2</li>
+    </ol>
     
 </body>
 </html>
